# hello-daisy

./: Cargo.toml  README.md  cargo-generate.toml  memory.x  openocd.cfg  openocd.gdb  stm32h7x-patched-itm.cfg
src/: main.rs
