[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
edition = "2018"
version = "0.1.0"

[dependencies]
stm32h7xx-hal = { version = "0.7.1", features = ["stm32h750", "rt" ] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.8", features = ["device"] }
cortex-m-semihosting = { version = "0.3.5" }
panic-semihosting = { version = "0.5.3" }
