[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
edition = "2018"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
cortex-m-semihosting = { version = "0.3.5" }
panic-semihosting = { version = "0.5.5" }
daisy_bsp = { version = "0.1.0"  }
