[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
edition = "2018"
version = "0.3.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
daisy_bsp = { version = "0.3.0", features = ["seed"]  }

[dev-dependencies]
cortex-m-semihosting = { version = "0.3.5" }
panic-halt = "0.2.0"
panic-itm = { version = "~0.4.1" }
panic-semihosting = { version = "0.5.6" }
